Pass most of SearchYouTube

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
   <script src="src/data/exampleVideoData.js"></script>
+
 </head>
 <body>
   <div id="app"></div>
@@ -20,6 +21,8 @@
   <script src="compiled/src/components/Nav.js"></script>
   <script src="compiled/src/components/Search.js"></script>
   <script src="compiled/src/components/App.js"></script>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
   <script src="compiled/src/index.js"></script>
+
 </body>
 </html>
